# vex

./: .gitignore  .vex_updates_applied  CLAUDE.md  README.md  bootstrap.py  build_zepp.sh  gen_cert.py  logrotate.conf  package-lock.json  package.json  playwright.config.js  pull_zepp.py  pyproject.toml  requirements.txt  seed.template.txt  self_model.template.json  setup.py  setup.sh  vex-daemon.service  vex-gui.service  vex-sync.service  vex-sync.timer  vex_cert.pem  vex_key.pem  vex_mesh_gui.py  vex_monitor.sh  vex_peers.json  vex_seed.template.txt  vex_self_model.template.json  vex_watchdog.sh
.claude/: settings.json
.claude/agents/: vex-auditor.md  vex-db.md  vex-doc.md  vex-fleet.md  vex-harness.md  vex-pipeline.md  vex-sysadmin.md  vex-tester.md  vex-vdsm.md  vex-zepp.md
.claude/skills/: cross-repo-ops.md  harness-builder.md
docs/: architecture.md  concept.md  constraints.md  decisions.md  design.md  implementation-plan.md  test-plan.md
tests/: conftest.py
tests/playwright/: mesh-gui.spec.js
tests/unit/: test_ask.py  test_recall.py  test_reply_engine.py  test_seed_kernel.py  test_self_model.py  (+3 more)
vex_daemon/: auth.py  brain.py  chat.py  cli.py  config.py  consolidate.py  daemon.py  embeddings.py  harness_builder.py  heartbeat.py  mcp_client.py  memory_index.py  metacognition.py  operations.py  peers.py  playwright_tools.py  recall.py  reconstruct.py  reply_engine.py  seed_kernel.py  self_model.py  status_page.py  tools.py  updater.py  vexcom.py  voice.py
vex_workspace/: hannah-optimization-note-2026-07-10.md  vex_bus_protocol.md  vex_sessions.jsonl
(+11 files in other folders)
