[project]
name = "vex-daemon"
version = "1.0.0"
description = "Continuity daemon for the Vex sovereign AI agent"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.138.2",
    "uvicorn>=0.49.0",
    "aiosqlite>=0.22.1",
    "mcp>=1.28.1",
]

[project.scripts]
vex = "vex_daemon.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests*", "doc*", "vex_voice*"]
